--- a/index.html
+++ b/index.html
@@ -1,1 +1,196 @@
-# MAYA-OKADA-WORKS
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <title>MAYA OKADA</title>
+<link rel="stylesheet" href="https://nicyan-ict.github.io/ict/style.css"/>    
+    <link rel="stylesheet" href="style.css">
+    </head>
+
+      <header>
+        <div class="header-logo">
+        <p>MAYA OKADA<span> SELECTED WORKS</span></p>
+        </div>
+        <div class="header-list">
+        <ul>
+        <li class="contact"><a href="file:///Users/mayaokada/Desktop/index.html">Contact</a></li><li class="slash1">/</li><li class="biography"><a href="file:///Users/mayaokada/Desktop/index.html">Biography</a></li><li class="slash1">/</li><li class="works"><a href="file:///Users/mayaokada/Desktop/index.html">Works</a></li>
+        </ul>
+        </div>
+        </header>
+
+
+    <body>
+    <div class="wrapper grid">
+    <div class="item">
+
+    <div class=item1>
+    ><img src="maiko.png">
+    <div class=item1-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item2>
+    <img src="maiko.png">
+    <div class=item2-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item3>
+    <img src="maiko.png">
+    <div class=item3-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item4>
+    <img src="maiko.png">
+    <div class=item4-text>
+    <p class=item-title>舞妓モダン<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item5>
+    <img src="sakuhin/meishi.png">
+    <div class=item5-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item6>
+    <img src="sakuhin/makuruhan.png">
+    <div class=item6-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item7>
+    <img src="sakuhin/seinomezame.png">
+    <div class=item7-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item8>
+    <img src="sakuhin/manga.png">
+    <div class=item8-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item9>
+    <img src="sakuhin/suzuka.png">
+    <div class=item9-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item10>
+    <img src="sakuhin/suzuka2.png">
+    <div class=item10-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item11>
+    <img src="sakuhin/beyond.png">
+    <div class=item11-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item12>
+    <img src="sakuhin/dokusougan.png">
+    <div class=item12-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item13>
+    <img src="sakuhin/tensura.png">
+    <div class=item13-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item14>
+    <img src="sakuhin/2.png">
+    <div class=item14-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item15>
+    <img src="sakuhin/4.png">
+    <div class=item15-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+
+    <div class="item">
+    <div class=item16>
+    <img src="sakuhin/5.png">
+    <div class=item16-text>
+    <p class=item-title>Jugendgedenken<p>
+    <p class="item-info">2019, artwork</p>
+    </div>
+    </div>
+    </div>
+    </div>
+
+
+    <footer>
+    <p class=copyright>2016-2020 MAYA OKADA SELECTED WORKS.</p>
+  </footer>
+
+
+
+
+  </body>
+</html>
