--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="item">
 
     <div class=item1>
-    ><img src="maiko.png">
+    <img src="maiko.png">
     <div class=item1-text>
     <p class=item-title>Jugendgedenken<p>
     <p class="item-info">2019, artwork</p>
