--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="header-list">
         <ul>
-        <li class="contact"><a href="file:///Users/mayaokada/Desktop/index.html">Contact</a></li><li class="slash1">/</li><li class="biography"><a href="file:///Users/mayaokada/Desktop/index.html">Biography</a></li><li class="slash1">/</li><li class="works"><a href="file:///Users/mayaokada/Desktop/index.html">Works</a></li>
+        <li class="contact"><a href="file:///Users/mayaokada/Desktop/index.html">Contact</a></li><li class="slash1">/</li><li class="biography"><a href="file:///Users/mayaokada/Desktop/index.html">Biography</a></li><li class="slash1">/</li><li class="work"><a href="file:///Users/mayaokada/Desktop/index.html">Works</a></li>
         </ul>
         </div>
         </header>
