--- a/index.html
+++ b/index.html
@@ -22,168 +22,158 @@
 
 
     <body>
-    <div class="wrapper grid">
-    <div class="item">
+  <body>
+  <div class="wrapper grid">
+  <div class="item">
 
-    <div class=item1>
-    <img src="maiko.png">
-    <div class=item1-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class=item1>
+  <img src="ohizumi.png">
+  <div class=item1-text>
+  <p class=item-title>大泉和文 個展<p>
+  <p class="item-info">2020, DM design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item2>
-    <img src="maiko.png">
-    <div class=item2-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item2>
+  <img src="suzuka.png">
+  <div class=item2-text>
+  <p class=item-title>鈴鹿芳康 個展<p>
+  <p class="item-info">2020, DM design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item3>
-    <img src="maiko.png">
-    <div class=item3-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item3>
+  <img src="maikomodan.png">
+  <div class=item3-text>
+  <p class=item-title>舞妓モダン<p>
+  <p class="item-info">2020, book design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item4>
-    <img src="maiko.png">
-    <div class=item4-text>
-    <p class=item-title>舞妓モダン<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item4>
+  <img src="ishimotoyasuhiro.png">
+  <div class=item4-text>
+  <p class=item-title>石本康博 生誕100年<p>
+  <p class="item-info">2020, book design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item5>
-    <img src="sakuhin/meishi.png">
-    <div class=item5-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item5>
+  <img src="lalalard.png">
+  <div class=item5-text>
+  <p class=item-title>LA LA LARD<p>
+  <p class="item-info">2020, web design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item6>
-    <img src="sakuhin/makuruhan.png">
-    <div class=item6-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item6>
+  <img src="tensumo.png">
+  <div class=item6-text>
+  <p class=item-title><br>転居するなら<br>スーモだった件<p>
+  <p class="item-info">2020, web design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item7>
-    <img src="sakuhin/seinomezame.png">
-    <div class=item7-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item7>
+  <img src="unseal.png">
+  <div class=item7-text>
+  <p class=item-title>unsealr<p>
+  <p class="item-info">2019, web design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item8>
-    <img src="sakuhin/manga.png">
-    <div class=item8-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item8>
+  <img src="dokusougan.png">
+  <div class=item8-text>
+  <p class=item-title>毒掃丸<p>
+  <p class="item-info">2019, video ads</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item9>
-    <img src="sakuhin/suzuka.png">
-    <div class=item9-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item9>
+  <img src="Jugendgedenken.png">
+  <div class=item9-text>
+  <p class=item-title>Jugendgedenken<p>
+  <p class="item-info">2019, artwork</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item10>
-    <img src="sakuhin/suzuka2.png">
-    <div class=item10-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item13>
+  <img src="poster.png">
+  <div class=item13-text>
+  <p class=item-title>本とポスターに<br>ついての思索<br><p>
+  <p class="item-info">2018, artwork</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item11>
-    <img src="sakuhin/beyond.png">
-    <div class=item11-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item14>
+  <img src="mandara.png">
+  <div class=item14-text>
+  <p class=item-title>Mandala<p>
+  <p class="item-info">2019, graphic art</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item12>
-    <img src="sakuhin/dokusougan.png">
-    <div class=item12-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item15>
+  <img src="meishi.png">
+  <div class=item15-text>
+  <p class=item-title>丸岡正青 名刺<p>
+  <p class="item-info">2017, graphic design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item13>
-    <img src="sakuhin/tensura.png">
-    <div class=item13-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item16>
+  <img src="clear-comic.png">
+  <div class=item16-text>
+  <p class=item-title>Clear Comic <p>
+  <p class="item-info">2019, graphic art</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item14>
-    <img src="sakuhin/2.png">
-    <div class=item14-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item15>
+  <img src="seinomezame.png">
+  <div class=item15-text>
+  <p class=item-title>せいのめざめ<p>
+  <p class="item-info">2017, book cover design</p>
+  </div>
+  </div>
+  </div>
 
-    <div class="item">
-    <div class=item15>
-    <img src="sakuhin/4.png">
-    <div class=item15-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
-
-    <div class="item">
-    <div class=item16>
-    <img src="sakuhin/5.png">
-    <div class=item16-text>
-    <p class=item-title>Jugendgedenken<p>
-    <p class="item-info">2019, artwork</p>
-    </div>
-    </div>
-    </div>
-    </div>
+  <div class="item">
+  <div class=item15>
+  <img src="sakuhin/4.png">
+  <div class=item15-text>
+  <p class=item-title>fading.png<p>
+  <p class="item-info">2016, calendar design</p>
+  </div>
+  </div>
+  </div>
 
 
     <footer>
