--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="item">
 
   <div class=item1>
-  <img src="ohizumi.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
   <div class=item1-text>
   <p class=item-title>大泉和文 個展<p>
   <p class="item-info">2020, DM design</p>
@@ -37,7 +37,7 @@
 
   <div class="item">
   <div class=item2>
-  <img src="suzuka.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true">
   <div class=item2-text>
   <p class=item-title>鈴鹿芳康 個展<p>
   <p class="item-info">2020, DM design</p>
@@ -47,7 +47,7 @@
 
   <div class="item">
   <div class=item3>
-  <img src="maikomodan.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/maikomodan.png?raw=true">
   <div class=item3-text>
   <p class=item-title>舞妓モダン<p>
   <p class="item-info">2020, book design</p>
@@ -57,7 +57,7 @@
 
   <div class="item">
   <div class=item4>
-  <img src="ishimotoyasuhiro.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true">
   <div class=item4-text>
   <p class=item-title>石本康博 生誕100年<p>
   <p class="item-info">2020, book design</p>
@@ -67,7 +67,7 @@
 
   <div class="item">
   <div class=item5>
-  <img src="lalalard.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true">
   <div class=item5-text>
   <p class=item-title>LA LA LARD<p>
   <p class="item-info">2020, web design</p>
@@ -77,7 +77,7 @@
 
   <div class="item">
   <div class=item6>
-  <img src="tensumo.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true">
   <div class=item6-text>
   <p class=item-title><br>転居するなら<br>スーモだった件<p>
   <p class="item-info">2020, web design</p>
@@ -87,7 +87,7 @@
 
   <div class="item">
   <div class=item7>
-  <img src="unseal.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/unseal.png?raw=true">
   <div class=item7-text>
   <p class=item-title>unsealr<p>
   <p class="item-info">2019, web design</p>
@@ -97,7 +97,7 @@
 
   <div class="item">
   <div class=item8>
-  <img src="dokusougan.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/dokusougan.png?raw=true">
   <div class=item8-text>
   <p class=item-title>毒掃丸<p>
   <p class="item-info">2019, video ads</p>
@@ -107,7 +107,7 @@
 
   <div class="item">
   <div class=item9>
-  <img src="Jugendgedenken.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true">
   <div class=item9-text>
   <p class=item-title>Jugendgedenken<p>
   <p class="item-info">2019, artwork</p>
@@ -117,7 +117,7 @@
 
   <div class="item">
   <div class=item13>
-  <img src="poster.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true">
   <div class=item13-text>
   <p class=item-title>本とポスターに<br>ついての思索<br><p>
   <p class="item-info">2018, artwork</p>
@@ -127,7 +127,7 @@
 
   <div class="item">
   <div class=item14>
-  <img src="mandara.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true">
   <div class=item14-text>
   <p class=item-title>Mandala<p>
   <p class="item-info">2019, graphic art</p>
@@ -137,7 +137,7 @@
 
   <div class="item">
   <div class=item15>
-  <img src="meishi.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true">
   <div class=item15-text>
   <p class=item-title>丸岡正青 名刺<p>
   <p class="item-info">2017, graphic design</p>
@@ -147,7 +147,7 @@
 
   <div class="item">
   <div class=item16>
-  <img src="clear-comic.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/clear-comic.png?raw=true">
   <div class=item16-text>
   <p class=item-title>Clear Comic <p>
   <p class="item-info">2019, graphic art</p>
@@ -157,7 +157,7 @@
 
   <div class="item">
   <div class=item15>
-  <img src="seinomezame.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/seinomezame.png?raw=true">
   <div class=item15-text>
   <p class=item-title>せいのめざめ<p>
   <p class="item-info">2017, book cover design</p>
@@ -167,7 +167,7 @@
 
   <div class="item">
   <div class=item15>
-  <img src="sakuhin/4.png">
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading.png?raw=true">
   <div class=item15-text>
   <p class=item-title>fading.png<p>
   <p class="item-info">2016, calendar design</p>
