--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
   <div class=item1-text>
   <p class=item-title>大泉和文 個展<p>
-  <p class="item-info">2020, DM design</p>
+  <p class="item-info">2020, dm design</p>
   </div>
   </div>
   </div>
@@ -40,7 +40,7 @@
   <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true">
   <div class=item2-text>
   <p class=item-title>鈴鹿芳康 個展<p>
-  <p class="item-info">2020, DM design</p>
+  <p class="item-info">2020, dm design</p>
   </div>
   </div>
   </div>
@@ -79,7 +79,7 @@
   <div class=item6>
   <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true">
   <div class=item6-text>
-  <p class=item-title><br>転居するなら<br>スーモだった件<p>
+  <p class="item-title6">転居するなら<br>スーモだった件<p>
   <p class="item-info">2020, web design</p>
   </div>
   </div>
@@ -119,7 +119,7 @@
   <div class=item13>
   <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true">
   <div class=item13-text>
-  <p class=item-title>本とポスターに<br>ついての思索<br><p>
+  <p class="item-title13">本とポスターに<br>ついての思索<br><p>
   <p class="item-info">2018, artwork</p>
   </div>
   </div>
@@ -169,7 +169,7 @@
   <div class=item15>
   <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading.png?raw=true">
   <div class=item15-text>
-  <p class=item-title>fading.png<p>
+  <p class=item-title>Fading calendar<p>
   <p class="item-info">2016, calendar design</p>
   </div>
   </div>
