--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class=item4>
   <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true">
   <div class=item4-text>
-  <p class=item-title>石本康博 生誕100年<p>
+  <p class="item-title4">石本康博<br>生誕100年<p>
   <p class="item-info">2020, book design</p>
   </div>
   </div>
