--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
   </div>
   </div>
   </div>
+    
+  <div class=item1>
+  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true">
+  <div class=item1-text>
+  <p class=item-title>メディアはマッサージである<p>
+  <p class="item-info">2020, dm design</p>
+  </div>
+  </div>
+  </div>
 
   <div class="item">
   <div class=item2>
