--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   <body>
   <div class="wrapper grid">
   <div class="item">
-
   <div class=item1>
   <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
   <div class=item1-text>
@@ -34,7 +33,8 @@
   </div>
   </div>
   </div>
-    
+  
+  <div class="item">
   <div class=item1>
   <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true">
   <div class=item1-text>
