--- a/index.html
+++ b/index.html
@@ -20,169 +20,173 @@
         </div>
         </header>
 
+      <body>
+      <div class="wrapper grid">
+      <div class="item">
+      <div class=“item1”>
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
+      <div class="item1-text">
+      <p class="item-title">大泉和文 個展<p>
+      <p class="item-info">2020, dm design</p>
+      </div>
+      </div>
+      </div>
 
-    <body>
-  <body>
-  <div class="wrapper grid">
-  <div class="item">
-  <div class=item1>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
-  <div class=item1-text>
-  <p class=item-title>大泉和文 個展<p>
-  <p class="item-info">2020, dm design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item2">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
+      <div class="item2-text">
+      <p class="item-title2">メディアは<br>マッサージである<p>
+      <p class="item-info">2020, book cover design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item2>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true">
-  <div class=item2-text>
-  <p class=item-title>鈴鹿芳康 個展<p>
-  <p class="item-info">2020, dm design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item3">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true">
+      <div class="item3-text">
+      <p class="item-title">鈴鹿芳康 個展<p>
+      <p class="item-info">2020, dm design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item3>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/maikomodan.png?raw=true">
-  <div class=item3-text>
-  <p class=item-title>舞妓モダン<p>
-  <p class="item-info">2020, book design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item4">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/maikomodan.png?raw=true">
+      <div class="item4-text">
+      <p class="item-title">舞妓モダン<p>
+      <p class="item-info">2020, book design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item4>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true">
-  <div class=item4-text>
-  <p class="item-title4">石本康博<br>生誕100年<p>
-  <p class="item-info">2020, book design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class=item5>
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true">
+      <div class="item5-text">
+      <p class="item-title5">石本康博<br>生誕100年<p>
+      <p class="item-info">2020, book design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item5>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true">
-  <div class=item5-text>
-  <p class=item-title>LA LA LARD<p>
-  <p class="item-info">2020, web design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item6">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true">
+      <div class="item6-text">
+      <p class="item-title">LA LA LARD<p>
+      <p class="item-info">2020, web design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item6>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true">
-  <div class=item6-text>
-  <p class="item-title6">転居するなら<br>スーモだった件<p>
-  <p class="item-info">2020, web design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class"item7">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true">
+      <div class="item7-text">
+      <p class="item-title7">転居するなら<br>スーモだった件<p>
+      <p class="item-info">2020, web design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item7>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/unseal.png?raw=true">
-  <div class=item7-text>
-  <p class=item-title>unsealr<p>
-  <p class="item-info">2019, web design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item8">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/unseal.png?raw=true">
+      <div class="item8-text">
+      <p class="item-title">unsealr<p>
+      <p class="item-info">2019, web design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item8>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/dokusougan.png?raw=true">
-  <div class=item8-text>
-  <p class=item-title>毒掃丸<p>
-  <p class="item-info">2019, video ads</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item9">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/dokusougan.png?raw=true">
+      <div class="item9-text">
+      <p class="item-title">毒掃丸<p>
+      <p class="item-info">2019, video ads</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item9>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true">
-  <div class=item9-text>
-  <p class=item-title>Jugendgedenken<p>
-  <p class="item-info">2019, artwork</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item10">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true">
+      <div class="item10-text">
+      <p class="item-title">Jugendgedenken<p>
+      <p class="item-info">2019, artwork</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item13>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true">
-  <div class=item13-text>
-  <p class="item-title13">本とポスターに<br>ついての思索<br><p>
-  <p class="item-info">2017, artwork</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item11">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true">
+      <div class="item11-text">
+      <p class="item-title11">本とポスターに<br>ついての思索<br><p>
+      <p class="item-info">2017, artwork</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item14>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true">
-  <div class=item14-text>
-  <p class=item-title>Mandala<p>
-  <p class="item-info">2017, graphic art</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item12">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true">
+      <div class="item12-text">
+      <p class="item-title">Mandala<p>
+      <p class="item-info">2017, graphic art</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item15>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true">
-  <div class=item15-text>
-  <p class=item-title>丸岡正青 名刺<p>
-  <p class="item-info">2017, graphic design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item13">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true">
+      <div class="item13-text">
+      <p class="item-title">丸岡正青 名刺<p>
+      <p class="item-info">2017, graphic design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item16>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/clear-comic.png?raw=true">
-  <div class=item16-text>
-  <p class=item-title>Clear Comic <p>
-  <p class="item-info">2017, graphic art</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item14">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/clear-comic.png?raw=true">
+      <div class=item14-text>
+      <p class="item-title">Clear Comic <p>
+      <p class="item-info">2017, graphic art</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item15>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/seinomezame.png?raw=true">
-  <div class=item15-text>
-  <p class=item-title>せいのめざめ<p>
-  <p class="item-info">2017, book cover design</p>
-  </div>
-  </div>
-  </div>
+      <div class="item">
+      <div class="item15">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/seinomezame.png?raw=true">
+      <div class="item15-text">
+      <p class="item-title">せいのめざめ<p>
+      <p class="item-info">2017, book cover design</p>
+      </div>
+      </div>
+      </div>
 
-  <div class="item">
-  <div class=item15>
-  <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading-calendar.png?raw=true">
-  <div class=item15-text>
-  <p class=item-title>Fading calendar<p>
-  <p class="item-info">2016, calendar design</p>
-  </div>
-  </div>
-  </div>
-    
- </div>
+      <div class="item">
+      <div class="item16">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading-calendar.png?raw=true">
+      <div class="item16-text">
+      <p class="item-title">Fading calendar<p>
+      <p class="item-info">2016, calendar design</p>
+      </div>
+      </div>
+      </div>
+        
+     </div>
 
+        <footer>
+        <p class=copyright>2016-2020 MAYA OKADA SELECTED WORKS.</p>
+      </footer>
 
-    <footer>
-    <p class=copyright>2016-2020 MAYA OKADA SELECTED WORKS.</p>
-  </footer>
-
-
-
-
-  </body>
-</html>
+      </body>
+    </html>
