--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </header>
 
       <body>
+      <body>
       <div class="wrapper grid">
       <div class="item">
       <div class=“item1”>
@@ -34,7 +35,7 @@
 
       <div class="item">
       <div class="item2">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
+      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true">
       <div class="item2-text">
       <p class="item-title2">メディアは<br>マッサージである<p>
       <p class="item-info">2020, book cover design</p>
