--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <body>
       <div class="wrapper grid">
       <div class="item">
-      <div class=“item1”>
+      <div class="item1">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
       <div class="item1-text">
       <p class="item-title">大泉和文 個展<p>
@@ -146,7 +146,7 @@
       <div class="item13">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true">
       <div class="item13-text">
-      <p class="item-title">丸岡正青 名刺<p>
+      <p class="item-title">フラワーデザイナーの名刺<p>
       <p class="item-info">2017, graphic design</p>
       </div>
       </div>
