--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="item13">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true">
       <div class="item13-text">
-      <p class="item-title">フラワーデザイナーの名刺<p>
+      <p class="item-title13">フラワーデザイナーの<br>名刺デザイン<p>
       <p class="item-info">2017, graphic design</p>
       </div>
       </div>
