--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="item1">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
       <div class="item1-text">
-      <p class="item-title">大泉和文 個展<p>
+      <p class="item-title">大泉和文 個展</p>
       <p class="item-info">2020, dm design</p>
       </div>
       </div>
@@ -36,7 +36,7 @@
       <div class="item2">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true">
       <div class="item2-text">
-      <p class="item-title2">メディアは<br>マッサージである<p>
+      <p class="item-title2">メディアは<br>マッサージである</p>
       <p class="item-info">2020, book cover design</p>
       </div>
       </div>
@@ -46,7 +46,7 @@
       <div class="item3">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true">
       <div class="item3-text">
-      <p class="item-title">鈴鹿芳康 個展<p>
+      <p class="item-title">鈴鹿芳康 個展</p>
       <p class="item-info">2020, dm design</p>
       </div>
       </div>
@@ -66,7 +66,7 @@
       <div class=item5>
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true">
       <div class="item5-text">
-      <p class="item-title5">石本康博<br>生誕100年<p>
+      <p class="item-title5">石本康博<br>生誕100年</p>
       <p class="item-info">2020, book design</p>
       </div>
       </div>
@@ -76,17 +76,17 @@
       <div class="item6">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true">
       <div class="item6-text">
-      <p class="item-title">LA LA LARD<p>
+      <p class="item-title">LA LA LARD</p>
       <p class="item-info">2020, web design</p>
       </div>
       </div>
       </div>
-
+        
       <div class="item">
-      <div class"item7">
+      <div class="item7">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true">
       <div class="item7-text">
-      <p class="item-title7">転居するなら<br>スーモだった件<p>
+      <p class="item-title7">転居するなら<br>スーモだった件</p>
       <p class="item-info">2020, web design</p>
       </div>
       </div>
@@ -116,7 +116,7 @@
       <div class="item10">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true">
       <div class="item10-text">
-      <p class="item-title">Jugendgedenken<p>
+      <p class="item-title">Jugendgedenken</p>
       <p class="item-info">2019, artwork</p>
       </div>
       </div>
@@ -126,7 +126,7 @@
       <div class="item11">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true">
       <div class="item11-text">
-      <p class="item-title11">本とポスターに<br>ついての思索<br><p>
+      <p class="item-title11">本とポスターに<br>ついての思索<br></p>
       <p class="item-info">2017, artwork</p>
       </div>
       </div>
@@ -136,7 +136,7 @@
       <div class="item12">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true">
       <div class="item12-text">
-      <p class="item-title">Mandala<p>
+      <p class="item-title">Mandala</p>
       <p class="item-info">2017, graphic art</p>
       </div>
       </div>
@@ -146,7 +146,7 @@
       <div class="item13">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true">
       <div class="item13-text">
-      <p class="item-title13">フラワーデザイナーの<br>名刺デザイン<p>
+      <p class="item-title13">フラワーデザイナー<br>名刺デザイン</p>
       <p class="item-info">2017, graphic design</p>
       </div>
       </div>
@@ -156,7 +156,7 @@
       <div class="item14">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/clear-comic.png?raw=true">
       <div class=item14-text>
-      <p class="item-title">Clear Comic <p>
+      <p class="item-title">Clear Comic </p>
       <p class="item-info">2017, graphic art</p>
       </div>
       </div>
@@ -176,7 +176,7 @@
       <div class="item16">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading-calendar.png?raw=true">
       <div class="item16-text">
-      <p class="item-title">Fading calendar<p>
+      <p class="item-title">Fading calendar</p>
       <p class="item-info">2016, calendar design</p>
       </div>
       </div>
