--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true">
       <div class="item2-text">
       <p class="item-title2">メディアは<br>マッサージである</p>
-      <p class="item-info">2020, book cover design</p>
+      <p class="item-info">2020, book design</p>
       </div>
       </div>
       </div>
@@ -146,7 +146,7 @@
       <div class="item13">
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true">
       <div class="item13-text">
-      <p class="item-title13">フラワーデザイナー<br>名刺デザイン</p>
+      <p class="item-title">名刺デザイン</p>
       <p class="item-info">2017, graphic design</p>
       </div>
       </div>
@@ -167,7 +167,7 @@
       <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/seinomezame.png?raw=true">
       <div class="item15-text">
       <p class="item-title">せいのめざめ<p>
-      <p class="item-info">2017, book cover design</p>
+      <p class="item-info">2017, book design</p>
       </div>
       </div>
       </div>
