--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="item">
       <div class="item6">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true">
+      <a href="https://okada1226.github.io/LA-LA-LARD/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true"></a>
       <div class="item6-text">
       <p class="item-title">LA LA LARD</p>
       <p class="item-info">2020, web design</p>
