--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="wrapper grid">
       <div class="item">
       <div class="item1">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true">
+      <a href="https://okada1226.github.io/Ohizumi-Kazufumi/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true"></a>
       <div class="item1-text">
       <p class="item-title">大泉和文 個展</p>
       <p class="item-info">2020, dm design</p>
