--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
       <div class="item">
       <div class="item3">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true">
+       <a href="https://okada1226.github.io/Suzuka-Yasu/"><p class="item-title"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true"></a>
       <div class="item3-text">
-      <a href="https://okada1226.github.io/Suzuka-Yasu/"><p class="item-title">鈴鹿芳康 個展</p></a>
+      鈴鹿芳康 個展</p>
       <p class="item-info">2020, dm design</p>
       </div>
       </div>
