--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
       <div class="item">
       <div class="item12">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true">
+      <a href="https://okada1226.github.io/Mandara/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true"></a>
       <div class="item12-text">
       <p class="item-title">Mandala</p>
       <p class="item-info">2017, graphic art</p>
